complete html of page

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- include font awesome cdd file  -->
-    <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <link rel="stylesheet" href="./css/all.css">
     <!-- include custom css file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Books</title>
 </head>
 
@@ -76,7 +76,7 @@
                     <button class="btn btn-light px-5 py-2">Buy now for $5.99</button>
                 </div>
                 <div class="col-md-5 col-sm-12 h-25">
-                    <img src="/assets/header-img.png" alt="books">
+                    <img src="./assets/header-img.png" alt="books">
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="pray">
-                            <img src="/assets/pexels-photo-1904769.jpeg" alt="pray">
+                            <img src="./assets/pexels-photo-1904769.jpeg" alt="pray">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -211,7 +211,22 @@
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="shadow-lg desktop">
                         <div class="d-flex flex-row justify-content-center">
-                             <i class="fas fa-desktop"></i>
+                            <i class="fas fa-desktop fa-3x pr-3 py-2 "></i>
+                            <div class="text text-left">
+                                <h3 class="pt-1 m-0">Desktop</h3>
+                                <p class="p-0 m-0">On Website</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 text-right">
+                    <div class="shadow-lg desktop">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fas fa-mobile-alt fa-3x pr-3 py-2 "></i>
+                            <div class="text text-left">
+                                <h3 class="pt-1 m-0">Mobile</h3>
+                                <p class="p-0 m-0">On Play Store</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -219,11 +234,129 @@
 
         </section>
         <!-- end download section  -->
+        <section class="feedback">
+            <div class="container-fluid text-center">
+                <h5 class="text-dark">What Our Reader's Say About Us</h5>
+                <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="team row">
+                <div class="col-md-4 col-12 text-center">
+                    <div class="card mr-2 d-inline-block">
+                        <div class="card-img-top">
+                            <img src="./assets/UI-face-1.jpg" class="d-block w-100" alt="face" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Abdelrahman Lotfy</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem magni vero
+                                inventore hic officia cum iste doloremque id totam dolorum! Praesentium temporibus quas
+                                cumque. Dolore odio perspiciatis enim quidem ea.</p>
+                            <a href="" class="text-secondary text-decoration-none">Go SomeWhere</a>
+                            <p class="text-black-50">CEO At Google</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12 text-center">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="card mr-2 d-inline-block">
+                                    <div class="card-img-top">
+                                        <img src="./assets/UI-face-2.jpg" class="d-block w-100" alt="face"
+                                            class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Mohammed Ahmed</h3>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Rem magni vero
+                                            inventore hic officia cum iste doloremque id totam dolorum! Praesentium
+                                            temporibus quas
+                                            cumque. Dolore odio perspiciatis enim quidem ea.</p>
+                                        <a href="" class="text-secondary text-decoration-none">Go SomeWhere</a>
+                                        <p class="text-black-50">CEO At Google</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card mr-2 d-inline-block">
+                                    <div class="card-img-top">
+                                        <img src="./assets/UI-face-3.jpg" class="d-block w-100" alt="face"
+                                            class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Maged Samy</h3>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Rem magni vero
+                                            inventore hic officia cum iste doloremque id totam dolorum! Praesentium
+                                            temporibus quas
+                                            cumque. Dolore odio perspiciatis enim quidem ea.</p>
+                                        <a href="" class="text-secondary text-decoration-none">Go SomeWhere</a>
+                                        <p class="text-black-50">CEO At Google</p>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12 text-center">
+                    <div class="card mr-2 d-inline-block">
+                        <div class="card-img-top">
+                            <img src="./assets/UI-face-4.jpg" class="d-block w-100" alt="face" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Abdelrahman Lotfy</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem magni vero
+                                inventore hic officia cum iste doloremque id totam dolorum! Praesentium temporibus quas
+                                cumque. Dolore odio perspiciatis enim quidem ea.</p>
+                            <a href="" class="text-secondary text-decoration-none">Go SomeWhere</a>
+                            <p class="text-black-50">CEO At Google</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end section students feedback  -->
 
     </main>
     <!-- start footer -->
-    <footer></footer>
+    <footer>
+        <div class="container-fluid p-0">
+            <div class="row text-left">
+                <div class="col-md-5">
+                    <h1 class="text-light">About Us</h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur assumenda
+                        enim, quasi maiores fuga neque.</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, <span>RakeMole</span></p>
+                </div>
+                <div class="col-md-5">
+                    <h1 class="text-light">News Letter</h1>
+                    <p class="text-muted">Stay Updated</p>
+                    <form class="form-inline">
+                        <div class="col pl-0">
+                            <div class="input-group pr-5">
+                                <input type="text" class="form-control bg-dark text-white" placeholder="E-Mail">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2">
+                    <h1 class="text-light">Follow Us</h1>
+                    <p class="text-muted">Let Us Be Social</p>
+                    <div class="column">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- include jquery and bootstrap js files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -233,6 +366,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./js/fontawesome.min.js"></script>
 </body>
 
 </html>
