--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <!-- start with navbar  -->
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">Books</a>
+                <a class="navbar-brand" href="#">
+                    <i class="fas fa-book-reader fa-3x mx-3"></i>
+                    Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -66,16 +68,14 @@
         <!-- start with header content  -->
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-7 col-sm-12">
+                <div class="col-lg-7 col-sm-12">
                     <h6>AUTHOR: DAILY TUITION</h6>
                     <h1>EXCITING ADVENTURE</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi mollitia voluptatibus reiciendis
-                        quidem, velit necessitatibus sed adipisci sequi
-                        olorum incidunt tenetur nihil.
-                        Culpa aspernatur soluta iusto, quas nam praesentium at.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eligendi magni esse eius eveniet
+                        asperiores?</p>
                     <button class="btn btn-light px-5 py-2">Buy now for $5.99</button>
                 </div>
-                <div class="col-md-5 col-sm-12 h-25">
+                <div class="col-lg-5 col-sm-12 h-25">
                     <img src="./assets/header-img.png" alt="books">
                 </div>
             </div>
@@ -95,7 +95,7 @@
                             <img src="./assets/pexels-photo-1904769.jpeg" alt="pray">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 talks">
                         <div class="panel text-left">
                             <h1>Mr.David Smith</h1>
                             <p class="pt-4">
@@ -119,8 +119,11 @@
         <section class="features container-fluid p-0">
             <div class="cover">
                 <div class="content text-center">
-                    <h1>Some Features That Made Us Unique ?</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam.</p>
+                    <div class="div">
+                            <h1>Some Features That Made Us Unique ?</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam.</p>
+                    </div>
+                    
                 </div>
             </div>
 
@@ -326,7 +329,8 @@
                     <h1 class="text-light">About Us</h1>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur assumenda
                         enim, quasi maiores fuga neque.</p>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, <span>RakeMole</span></p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+                        <span>RakeMole</span></p>
                 </div>
                 <div class="col-md-5">
                     <h1 class="text-light">News Letter</h1>
