style numbers of transactions, purchase and download sections

--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
             <div class="cover">
                 <div class="content text-center">
                     <div class="div">
-                            <h1>Some Features That Made Us Unique ?</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam.</p>
+                        <h1>Some Features That Made Us Unique ?</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam.</p>
                     </div>
-                    
+
                 </div>
             </div>
 
-            <div class="container-fluid text-center">
+            <div class="container-fluid text-center mt-3">
                 <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
                     <div class="rect">
                         <h1>1234</h1>
@@ -204,36 +204,38 @@
         <!-- end purchase section   -->
 
         <!-- start download section  -->
-        <section class="download text-center container-fluid p-0">
-            <h2>Download Our App for All Platform</h2>
+        <section class="download text-center">
+            <h2 class="mt-5">Download Our App for All Platform</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore velit quaerat temporibus inventore
                 reprehenderit unde natus. Dolores quod quasi, dignissimos cum delectus quis sit ipsa est! Asperiores
                 explicabo reiciendis beatae.</p>
-
-            <div class="platform row">
-                <div class="col-md-6 col-sm-12 text-right">
-                    <div class="shadow-lg desktop">
-                        <div class="d-flex flex-row justify-content-center">
-                            <i class="fas fa-desktop fa-3x pr-3 py-2 "></i>
-                            <div class="text text-left">
-                                <h3 class="pt-1 m-0">Desktop</h3>
-                                <p class="p-0 m-0">On Website</p>
+            <div class="container">
+                <div class="platform row">
+                    <div class="col-md-6 col-sm-12 text-right">
+                        <div class="shadow-lg desktop">
+                            <div class="d-flex flex-row justify-content-center">
+                                <i class="fas fa-desktop fa-3x pr-3 py-2 "></i>
+                                <div class="text text-left">
+                                    <h3 class="pt-1 m-0">Desktop</h3>
+                                    <p class="p-0 m-0">On Website</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-sm-12 text-right">
-                    <div class="shadow-lg desktop">
-                        <div class="d-flex flex-row justify-content-center">
-                            <i class="fas fa-mobile-alt fa-3x pr-3 py-2 "></i>
-                            <div class="text text-left">
-                                <h3 class="pt-1 m-0">Mobile</h3>
-                                <p class="p-0 m-0">On Play Store</p>
+                    <div class="col-md-6 col-sm-12 text-right">
+                        <div class="shadow-lg desktop">
+                            <div class="d-flex flex-row justify-content-center">
+                                <i class="fas fa-mobile-alt fa-3x pr-3 py-2 "></i>
+                                <div class="text text-left">
+                                    <h3 class="pt-1 m-0">Mobile</h3>
+                                    <p class="p-0 m-0">On Play Store</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
 
         </section>
         <!-- end download section  -->
